# EasyEventStudies

./: .gitignore  LICENSE  README.md  pyproject.toml
easy_event_studies/: Philipp_BA_20240419.ipynb  easy_event_studies.py  event_study_results.xlsx  sandbox_2.ipynb  sandbox_testing.ipynb  test_easy_event_studies.py
src/EasyEventStudies.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/easyeventstudies/: __init__.py  easy_event_studies.py  sandbox_2.ipynb  test_easy_event_studies.py
